# Optimal-Control

./: LICENSE  README.md  pyproject.toml  test_nonlinear_without_u_complicated.m
Codes/: CSTR.m  CSTR_freeTf.m  optimalControlSolver.m  optimalController.m  test_optimalController_numeric.m  test_optimalController_symbolic.m
matlab/: CSTR_freeTf.m  demo.m  optimalControlSolver.m
python/: CSTR.py  CSTR_freeTf.py  __init__.py  demo.py  optimalControlSolver.py
symocp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
